<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/text_askChooseSet" />


        <Button
            android:id="@+id/learnWordsInProcess_5_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_chooseSetToLearn5"
            android:padding="24dp"/>

        <Button
            android:id="@+id/learnWordsInProcess_10_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_chooseSetToLearn10"
            android:padding="24dp"/>

        <Button
            android:id="@+id/learnWordsInProcess_20_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_chooseSetToLearn20"
            android:padding="24dp"/>

        <Button
            android:id="@+id/learnWordsInProcess_30_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_chooseSetToLearn30"
            android:padding="24dp"/>

        <Button
            android:id="@+id/learnWordsInProcess_50_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_chooseSetToLearn50"
            android:padding="24dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingTop="40dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <TextView
                android:textSize="16dp"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:padding="5dp"
                android:text="@string/text_wayToLearnInfo" />

            <TextView
                android:id="@+id/tv_wayToLearnValue"
                android:textSize="16dp"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/text_rusEngWayToLearn" />

            <Button
                android:id="@+id/button_changeWayToLearn"
                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_changeWayToLearn"
                android:paddingEnd="30dp"
                android:paddingRight="30dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>