<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/text_askChooseOption" />

        <Button
            android:id="@+id/recallWordsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_chooseRecallWords"
            android:padding="24dp"/>

        <Button
            android:id="@+id/learnWordsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_chooseLearnWords"
            android:padding="24dp"/>

        <Button
            android:id="@+id/viewMyWordsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_chooseViewChangeAllWords"
            android:padding="24dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>