<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/layout_rounded_corners"
    android:paddingStart="16dp"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/tv_russian_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/rus"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_viewRusWord"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="textView_viewRusWord" />

    <TextView
        android:id="@+id/textView_viewRusWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_russian_hint"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="textView_viewRusWord" />

    <TextView
        android:id="@+id/tv_english_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/eng"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_viewEngWord"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="textView_viewRusWord" />

    <TextView
        android:id="@+id/textView_viewEngWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_english_hint"
        app:layout_constraintTop_toBottomOf="@+id/textView_viewRusWord"
        tools:text="textView_viewEngWord" />


    <LinearLayout
        android:id="@+id/ll_changeWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_english_hint"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editText_changeEngWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_english_hint"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="editText_changeEngWord"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/editText_changeRusWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/editText_changeEngWord"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="editText_changeRusWord"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_changeWord"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_changeWord"
            app:layout_constraintTop_toBottomOf="@+id/editText_changeRusWord"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>